# Project-2.-Job-search

./: .coverage  .gitignore  README.md  config.py  conftest.py  main.py  pyproject.toml  requirements.txt
src/: api.py  database.py  models.py  pyproject.toml  storage.py  utils.py
tests/: test_api.py  test_database.py  test_models.py  test_storage.py  test_utils.py
