[tool.poetry]
name = "job_search"
version = "0.1.0"
description = "Проект для работы с вакансиями и БД PostgreSQL"
authors = ["Anna <anna@example.com>"]
readme = "../README.md"
package-mode = false
packages = [ { include = "src" } ]

# остальные разделы без изменений
[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.2.0"
coverage = "^7.8.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
build = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-vv --cov=src --cov-report=html"

